27 September 2012: Wouter
	- include: directive in config file accepts wildcards.  Patch from
	  Paul Wouters.  Suggested use: include: "/etc/unbound.d/conf.d/*"

21 September 2012: Wouter
	- chdir to / after chroot call (suggested by Camiel Dobbelaar).

17 September 2012: Wouter
	- patch_rsamd5_enable.diff: this patch enables RSAMD5 validation
	  otherwise it is treated as insecure.  The RSAMD5 algorithm is
	  deprecated (RFC6725).  The MD5 hash is considered weak for some
	  purposes, if you want to sign your zone, then RSASHA256 is an
	  uncontested hash.

30 August 2012: Wouter
	- RFC6725 deprecates RSAMD5: this DNSKEY algorithm is disabled.
	- iana portlist updated.

29 August 2012: Wouter
	- Nicer comments outgoing-port-avoid, thanks Stu (bug #465).

22 August 2012: Wouter
	- Fallback to 1472 and 1232, one fragment size without headers.

21 August 2012: Wouter
	- Fix timeouts so that when a server has been offline for a while
	  and is probed to see it works, it becomes fully available for
	  server selection again.

17 August 2012: Wouter
	- Add documentation to libunbound for default nonuse of resolv.conf.

2 August 2012: Wouter
	- trunk has 1.4.19 under development (fixes from 1 aug and 31 july
	are for 1.4.19).
	- iana portlist updated.

1 August 2012: Wouter
	- Fix openssl race condition, initializes openssl locks, reported
	  by Einar Lonn and Patrik Wallstrom.

31 July 2012: Wouter
	- Improved forward-first and stub-first documentation.
	- Fix that enables modules to register twice for the same
	  serviced_query, without race conditions or administration issues.
	  This should not happen with the current codebase, but it is robust.
	- Fix forward-first option where it sets the RD flag wrongly.
	- added manpage links for libunbound calls (Thanks Paul Wouters).

30 July 2012: Wouter
	- tag 1.4.18rc2 (became 1.4.18 release at 2 august 2012).

27 July 2012: Wouter
	- unbound-host works with libNSS